Agregando botón siguiente

--- a/Git/011.1_Crear_Ramas.md
+++ b/Git/011.1_Crear_Ramas.md
@@ -149,4 +149,9 @@ Debido a que una rama Git es realmente un simple archivo que contiene los 40 car
 
 Esto contrasta fuertemente con los métodos de ramificación usados por otros sistemas de control de versiones, en los que crear una rama nueva supone el copiar todos los archivos del proyecto a un directorio adicional nuevo. Esto puede llevar segundos o incluso minutos, dependiendo del tamaño del proyecto; mientras que en Git el proceso es siempre instantáneo. Y además, debido a que se almacenan también los nodos padre para cada confirmación, el encontrar las bases adecuadas para realizar una fusión entre ramas es un proceso automático y generalmente sencillo de realizar. Animando así a los desarrolladores a utilizar ramificaciones frecuentemente.
 
+[Siguiente **&#129042;**](011.2_Ramificaciones_Git_Recapitulación.md "Recapitulación")
+
+---
+[*Volver* **&ldca;**](README.md "Ir a Readme") [*Subir* **&#11165;**](# "Ir al título")
+
 
