--- a/Git/011.2_Ramificaciones_Git_Recapitulación.md
+++ b/Git/011.2_Ramificaciones_Git_Recapitulación.md
@@ -1,3 +1,8 @@
 # Recapitulación
 
 Hemos visto los procedimientos básicos de ramificación **(branching)** y fusión **(merging)** en Git. A estas alturas, te sentirás cómodo creando nuevas ramas **(branch)**, saltando **(checkout)** entre ramas para trabajar y fusionado **(merge)** ramas entre ellas. También conocerás cómo compartir tus ramas enviándolas **(push)** a un servidor compartido, cómo trabajar volaborativamente en ramas compartidas, y cómo reorganizar **(rebase)** tus ramas antes de compartirlas. A continuación, hanlaremos sobre lo que necesitas para tener tu propio servidor de hospedaje Git.
+
+[Siguiente **&#129042;**](012_Subir_Archivos_a_GitHub.md "Archivos en la nube con GitHub")
+
+---
+[*Volver* **&ldca;**](README.md "Ir a Readme") [*Subir* **&#11165;**](# "Ir al título")
