Bash, Git 014, 015 y README.md

--- a/BASH/004_Vim.md
+++ b/BASH/004_Vim.md
@@ -2,4 +2,8 @@ Debemos recordar que una manera de empezar a editar código en Vim debemos presi
 
 Para grabar lo escritio presionar **Esc** luego **:w** y después **:q** por si quieres salir, ahora si quieres guardar y salir en este orden con un solo comando **:wq**.
 
+---
+[Siguiente **&#129042;**](/BASH/atajos_de_teclado.md "Comodines")
 
+---
+[*Volver* **&ldca;**](/BASH/README.md "Ir a Readme") [*Subir* **&#11165;**](# "Ir al título")
